@@ -4,6 +4,7 @@ xxxx-xx-xx: Revelation 0.4.4
 New features:
 - improved the password checker dialog
 - option for copying password to clipboard on doubleclick
+- passwords are removed from clipboard after 60 seconds
 - new "Add folder" item, instead of adding folders through "Add entry"
 - removed "New file" item from toolbar
 
